@@ -8,6 +8,23 @@
 	 <simpara>
 		<revhistory>
 			<revision>
+				<revnumber>3.2-3</revnumber>
+				 <date>Thu Jul 11 2013</date>
+				 <author>
+					<firstname>Zac</firstname>
+					 <surname>Dover</surname>
+					 <email>zdover@redhat.com</email>
+				</author>
+				 <revdescription>
+					<simplelist>
+					  <member>Replaced a broken link to kate plugins page on CPAN with a working link - BZ#973461
+					 </member>
+					</simplelist>
+
+				</revdescription>
+
+			</revision>
+			<revision>
 				<revnumber>3.2-2</revnumber>
 				 <date>Thu Jul 11 2013</date>
 				 <author>
