@@ -28,6 +28,7 @@
   - Standardized prompts in commands. BZ #880456
   - Updated web_formats publican.cfg info BZ #839141
   - Replaced 'home page' with 'product or version page' BZ #921803
+  - Replaced a broken link to CPAN with a working link BZ# 973461
 
 
 3.1.5 Mon Mar 18 2013
